--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,21 +1,25 @@
 name: My first workflow
-on: workflow_dispatch
+on: [push, workflow_dispatch]
 jobs:
   my-first-job:
     runs-on: ubuntu-latest
     steps:
       - name: List all files
         run: ls -a
-      - name: Basic CPU details
-        run: lscpu
-      - name: RAM usage (human readable)
-        run: free -h
+      - name: Print Working Directory
+        run: pwd
+      - name: Create JS File
+        run: echo 'console.log("Hello World!");' > app.js
+      - name: List all files
+        run: ls -a
+      - name: Run Node.js File
+        run: node app.js
+
   my-second-job:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  
+    needs: my-first-job
     steps:
-       - name: Run multiple commands
-         run: |
-          lscpu
-          uname -r
-          free -h
-          nproc
+      - name: Print Node.js Version
+        run: node -v
+      - name: Print all files
+        run: ls -a
