--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -4,9 +4,5 @@ jobs:
   my-first-job:
     runs-on: ubuntu-latest
     steps:
-      - name: List all files
-        run: ls -a
-      - name: Print Working Directory
-        run: pwd
-      - name: Checkout Repo
-        uses: actions/checkout@v6
+        - run: ls -a
+        - run: pwd
