--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -6,4 +6,4 @@ jobs:
     steps:
         - run: ls -a
         - run: pwd
-        - run: echo ${{toJson(github)}}
+        - run: echo "${{toJson(github)}}"
