--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -7,7 +7,5 @@ jobs:
       HELLO: "Hello World!"
     runs-on: ubuntu-latest
     steps:
-        - run: echo "${{toJson(env)}}"
-        - run: echo "${{toJson(vars)}}"
-        - run: echo "${{toJson(secrets)}}"
-        - run: echo "${{toJson(runner)}}"
+        - run: echo "${{toJson(env.HELLO)}}"
+        - run: echo "$HELLO"
